Fix light/dark mode styling

--- a/src/mwau-popup/src/components/SoundSettings.css
+++ b/src/mwau-popup/src/components/SoundSettings.css
@@ -1,6 +1,7 @@
 button,
 label[for="audioFileUpload"] {
   background-color: #f5f5f5;
+  color: #050505;
   font-family: Segoe UI Historic, Segoe UI, Helvetica, Arial, sans-serif;
   border-radius: 6px;
   border-style: unset;
@@ -32,8 +33,16 @@ input[type="file"] {
   justify-content: space-evenly;
 }
 
-@media (prefers-color-scheme: dark) {
+audio {
+  color-scheme: light;
+  color: #050505;
+}
 
+audio::-webkit-media-controls-panel {
+  background-color: #e9e9e9;
+}
+
+@media (prefers-color-scheme: dark) {
   button,
   label[for="audioFileUpload"] {
     background-color: #4c4c4c;
@@ -43,5 +52,13 @@ input[type="file"] {
   button:hover,
   label[for="audioFileUpload"]:hover {
     background-color: #5e5e5e;
+  }
+
+  audio {
+    color-scheme: dark;
+  }
+
+  audio::-webkit-media-controls-panel {
+    background-color: #4c4c4c;
   }
 }
